--- a/config.development.json
+++ b/config.development.json
@@ -1,5 +1,5 @@
 {
   "githubToken": process.env.GITHUB_TOKEN,
   "rsaPrivateKey": process.env.RSA_PRIVATE_KEY,
-  "port": 80
+  "port": process.env.PORT
 }
